kubernetes/apps/blog/preview/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-preview
  labels:
    app.kubernetes.io/name: blog-preview
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: blog-preview
