kubernetes/apps/blog/preview/app/httproute-internal.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-preview
  namespace: blog
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Development"
    gethomepage.dev/name: "Blog preview"
spec:
  hostnames:
    - "preview.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: blog-preview
          port: 80
